--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -20,7 +20,7 @@
 		systematic literature review on vectors, host range, and the spatial
 		distribution in the 20th and 21st century
 	},
-	author       = {Hattendorf, Carolin and Lühken, Renke},
+	author       = {Hattendorf, Carolin and L\"{u}hken, Renke},
 	year         = 2025,
 	journal      = {bioRxiv},
 	doi          = {10.1101/2025.02.17.638693},
@@ -28,17 +28,17 @@
 }
 @phdthesis{salvador_baiges_clima_2024,
 	title        = {
-		Clima, orografia i dinàmiques de poblament al {Pirineu} {Central}.
-		{Arqueologia}, {SIG} i modelització espacial del patró d'ocupació del
-		territori durant el {Neolític} (5700- 2100 cal {ANE})
+		Clima, orografia i din\`{a}miques de poblament al {Pirineu} {Central}.
+		{Arqueologia}, {SIG} i modelitzaci\'{o} espacial del patr\'{o} d'ocupaci\'{o}
+		del territori durant el {Neol\'{\i}tic} (5700- 2100 cal {ANE})
 	},
-	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol (dir.)},
+	author       = {Salvador Baiges, Guillem and Gassiot Ballb\`{e}, Ermengol (dir.)},
 	year         = 2024,
 	url          = {https://ddd.uab.cat/record/301073},
 	type         = {PhD Thesis},
 	school       = {
-		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
-		Prehistòrica
+		Universitat Aut\`{o}noma de Barcelona. Programa de Doctorat en Arqueologia
+		Prehist\`{o}rica
 	}
 }
 @article{williams_active_2024,
@@ -65,7 +65,7 @@
 	shorttitle   = {How to {Approach} the {Definition} of {\textless}span style="font-variant},
 	author       = {
 		Elio Medina, Javier and Plathner, Frida Vermina and Pastor, Elsa and
-		Fernandez‐Anez, Nieves
+		Fernandez-Anez, Nieves
 	},
 	year         = 2025,
 	month        = jan,
@@ -81,8 +81,8 @@
 		changes in climate in two major tree species
 	},
 	author       = {
-		Di Fabio, Alessandro and Buttò, Valentina and Chakraborty, Debojyoti and
-		O’Neill, Gregory A. and Schueler, Silvio and Kreyling, Juergen
+		Di Fabio, Alessandro and Butt\`{o}, Valentina and Chakraborty, Debojyoti and
+		O'Neill, Gregory A. and Schueler, Silvio and Kreyling, Juergen
 	},
 	year         = 2024,
 	month        = jul,
@@ -142,7 +142,7 @@
 }
 @article{buma_including_2024,
 	title        = {
-		Including non‐growing season emissions of {N}₂{O} in {US} maize could raise
+		Including non-growing season emissions of {N}₂{O} in {US} maize could raise
 		net {CO}₂e emissions by 31\% annually
 	},
 	author       = {Buma, Brian},
@@ -164,9 +164,9 @@
 		{Archipelago} {Using} an {Ensemble} of {Species} {Distribution} {Modelling}
 	},
 	author       = {
-		García-Alvarado, Juan José and Pestano-González, Miguel and
-		González-Montelongo, Cristina and Naranjo-Cigala, Agustín and Arévalo, José
-		Ramón
+		Garc\'{\i}a-Alvarado, Juan Jos\'{e} and Pestano-Gonz\'{a}lez, Miguel and
+		Gonz\'{a}lez-Montelongo, Cristina and Naranjo-Cigala, Agust\'{\i}n and
+		Ar\'{e}valo, Jos\'{e} Ram\'{o}n
 	},
 	year         = 2025,
 	month        = mar,
@@ -225,8 +225,8 @@
 		export crop
 	},
 	author       = {
-		Varma, Varun and Mosedale, Jonathan R. and Alvarez, José Antonio Guzmán and
-		Bebber, Daniel P.
+		Varma, Varun and Mosedale, Jonathan R. and Alvarez, Jos\'{e} Antonio
+		Guzm\'{a}n and Bebber, Daniel P.
 	},
 	year         = 2025,
 	month        = mar,
@@ -243,7 +243,7 @@
 	},
 	author       = {
 		Lindgren, Finn and Bachl, Fabian and Illian, Janine and Suen, Man Ho and Rue,
-		Håvard and Seaton, Andrew E.
+		H\aa{}vard and Seaton, Andrew E.
 	},
 	year         = 2024,
 	url          = {https://arxiv.org/abs/2407.00791}
@@ -254,9 +254,9 @@
 		activity of \textit{{Aedes} albopictus} from {Germany} at low temperatures
 	},
 	author       = {
-		Lühken, Renke and Rauhöft, Leif and Pluskota, Björn and Lange, Unchana and
-		Helms, Michelle and Becker, Norbert and Schmidt-Chanasit, Jonas and Kuhn,
-		Carola and Tannich, Egbert and Jansen, Stephanie and Heitmann, Anna
+		L\"{u}hken, Renke and Rauh\"{o}ft, Leif and Pluskota, Bj\"{o}rn and Lange,
+		Unchana and Helms, Michelle and Becker, Norbert and Schmidt-Chanasit, Jonas
+		and Kuhn, Carola and Tannich, Egbert and Jansen, Stephanie and Heitmann, Anna
 	},
 	year         = 2024,
 	month        = dec,
@@ -278,7 +278,7 @@
 	},
 	author       = {
 		Mallory, Mark L. and MacLean, Seth and Baak, Julia E. and Boudreau, Michael
-		and Priest, Jenna M. and Morrill, André and Provencher, Jennifer F. and
+		and Priest, Jenna M. and Morrill, Andr\'{e} and Provencher, Jennifer F. and
 		O'Driscoll, Nelson J.
 	},
 	year         = 2025,
@@ -321,7 +321,7 @@
 }
 @article{coffey_spatial_2025,
 	title        = {
-		The spatial distribution of a hummingbird‐pollinated plant is not strongly
+		The spatial distribution of a hummingbird-pollinated plant is not strongly
 		influenced by hummingbird abundance
 	},
 	author       = {Coffey, Matthew L. and Simons, Andrew M.},
@@ -339,7 +339,9 @@
 		{Mapping the Missing: Assessing Amphibian Sampling Completeness and Overlap
 		With Global Protected Areas}
 	},
-	author       = {Herrera-Lopera, Jorge Mario and Solé, Mirco and Cultid-Medina, Carlos A.},
+	author       = {
+		Herrera-Lopera, Jorge Mario and Sol\'{e}, Mirco and Cultid-Medina, Carlos A.
+	},
 	year         = 2025,
 	journal      = {Ecology and Evolution},
 	volume       = 15,
@@ -392,7 +394,7 @@
 		air-breathing krill predators using acoustic data from the fishery
 	},
 	author       = {
-		Dominik Bahlburg  and Sebastian Menze  and Bjørn A. Krafft  and Andy D.
+		Dominik Bahlburg  and Sebastian Menze  and Bj\o{}rn A. Krafft  and Andy D.
 		Lowther  and Bettina Meyer
 	},
 	year         = 2025,
@@ -425,7 +427,7 @@
 		Vectors, host range, and spatial distribution of \textit{Dirofilaria immitis}
 		and \textit{D. repens} in {Europe}
 	},
-	author       = {Hattendorf, Carolin and Lühken, Renke},
+	author       = {Hattendorf, Carolin and L\"{u}hken, Renke},
 	year         = 2025,
 	month        = jul,
 	journal      = {Infectious Diseases of Poverty},
@@ -480,8 +482,8 @@
 		are important for bears during hyperphagia
 	},
 	author       = {
-		Pérez-Girón, José Carlos and López-Bao, José Vicente and Díaz-Varela, Emilio
-		and Álvarez-Álvarez, Pedro
+		P\'{e}rez-Gir\'{o}n, Jos\'{e} Carlos and L\'{o}pez-Bao, Jos\'{e} Vicente and
+		D\'{\i}az-Varela, Emilio and \'{A}lvarez-\'{A}lvarez, Pedro
 	},
 	year         = 2025,
 	month        = aug,
@@ -500,7 +502,7 @@
 	},
 	author       = {
 		Fu, Fengyu and Wang, Shuai and Wu, Xutong and Chen, Shiyin and Tan, Zimin and
-		Ye, ChongChong and Grünzweig, José M.
+		Ye, ChongChong and Gr\"{u}nzweig, Jos\'{e} M.
 	},
 	year         = 2025,
 	month        = aug,
@@ -515,7 +517,7 @@
 }
 @article{kutza_endemic_2025,
 	title        = {
-		Endemic and invasion dynamics of wild tomato species on the {Galápagos}
+		Endemic and invasion dynamics of wild tomato species on the {Gal\'{a}pagos}
 		{Islands}, across two centuries of collection records
 	},
 	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
@@ -592,7 +594,7 @@
 		{Research}
 	},
 	author       = {
-		Fard, Pedram and Hügel, Jonas and Keivabu, Risto Conte and Dominici,
+		Fard, Pedram and H\"{u}gel, Jonas and Keivabu, Risto Conte and Dominici,
 		Francesca and Zagheni, Emilio and Estiri, Hossein and Patel, Chirag J.
 	},
 	year         = 2025,
@@ -613,8 +615,8 @@
 		least-cost path analysis
 	},
 	author       = {
-		Cordero, Elvin and Ruiz Vélez, Roy and Huérfano Moreno, Víctor and Sherman,
-		Clark
+		Cordero, Elvin and Ruiz V\'{e}lez, Roy and Hu\'{e}rfano Moreno, V\'{\i}ctor
+		and Sherman, Clark
 	},
 	year         = 2025,
 	month        = sep,
@@ -703,7 +705,7 @@
 	title        = {{Examining the Interface Design of Tidyverse}},
 	author       = {Tanaka, Emi},
 	year         = 2025,
-	month        = {Nov},
+	month        = nov,
 	day          = {05},
 	journal      = {Australian {\&} New Zealand Journal of Statistics},
 	publisher    = {John Wiley {\&} Sons, Ltd},
@@ -721,17 +723,18 @@
 		Eight millennia of continuity of a previously unknown lineage in {Argentina}
 	},
 	author       = {
-		Maravall-López, Javier and Motti, Josefina M. B. and Pastor, Nicolás and
-		Tavella, María Pía and Fabra, Mariana and Babot, Pilar and Bonomo, Mariano
-		and Cornero, Silvia E. and Lamenza, Guillermo N. and Leon, Diego Catriel and
-		Miranda De Zela, Paula C. and Politis, Gustavo G. and Angeletti, Sofía C. and
-		Cattáneo, G. Roxana and Dantas, Mariana and Drube, Hilton and Gonzalez
-		Baroni, Lucia G. and Hocsman, Salomón and Izeta, Andrés D. and Moralejo,
-		Reinaldo A. and Aldazabal, Verónica and Basso, Diego M. and Bayón, Cristina
-		and Couso, María Guillermina and D’Andrea, Ulises and Del Río, Paula and
-		Figueroa, Germán G. and Frontini, Romina and Gonzalez, Mariela Edith and
-		Laguens, Andrés G. and Martínez, Jorge G. and Messineo, Pablo G. and Nores,
-		Beatriz and Olivera, Daniel E. and Sario, Gisela M. and Sbattella, Analía and
+		Maravall-L\'{o}pez, Javier and Motti, Josefina M. B. and Pastor, Nicol\'{a}s
+		and Tavella, Mar\'{\i}a P\'{\i}a and Fabra, Mariana and Babot, Pilar and
+		Bonomo, Mariano and Cornero, Silvia E. and Lamenza, Guillermo N. and Leon,
+		Diego Catriel and Miranda De Zela, Paula C. and Politis, Gustavo G. and
+		Angeletti, Sof\'{\i}a C. and Catt\'{a}neo, G. Roxana and Dantas, Mariana and
+		Drube, Hilton and Gonzalez Baroni, Lucia G. and Hocsman, Salom\'{o}n and
+		Izeta, Andr\'{e}s D. and Moralejo, Reinaldo A. and Aldazabal, Ver\'{o}nica
+		and Basso, Diego M. and Bay\'{o}n, Cristina and Couso, Mar\'{\i}a Guillermina
+		and D'Andrea, Ulises and Del R\'{\i}o, Paula and Figueroa, Germ\'{a}n G. and
+		Frontini, Romina and Gonzalez, Mariela Edith and Laguens, Andr\'{e}s G. and
+		Mart\'{\i}nez, Jorge G. and Messineo, Pablo G. and Nores, Beatriz and
+		Olivera, Daniel E. and Sario, Gisela M. and Sbattella, Anal\'{\i}a and
 		Scabuzzo, Clara and Tavarone, Aldana M. and Vecchi, Rodrigo and Callan, Kim
 		and Caughran, Ella and Estrada, Oscar and Frost, Trudi and Iliev, Lora and
 		Kearns, Aisling and Kellogg, Jack and Krettek, Kim-Louise and Lawson, Ann
@@ -739,8 +742,8 @@
 		and Qiu, Lijun and Roca-Rada, Xavier and Soos, Gregory and Webb, Peter A. and
 		Workman, J. Noah and Rohland, Nadin and Patterson, Nick and Lazaridis, Iosif
 		and Fehren-Schmitz, Lars and Posth, Cosimo and Llamas, Bastien and Mallick,
-		Swapan and Demarchi, Darío A. and Cabana, Graciela S. and Reich, David and
-		Nores, Rodrigo
+		Swapan and Demarchi, Dar\'{\i}o A. and Cabana, Graciela S. and Reich, David
+		and Nores, Rodrigo
 	},
 	year         = 2025,
 	month        = nov,
@@ -754,8 +757,8 @@
 @article{d17110781,
 	title        = {
 		Prezygotic and Postzygotic Reproductive Incompatibilities Complement Each
-		Other in the Formation of a Cryptic Amphipod Species: The Example of a
-		{Lake Baikal} Species Complex \textit{{Eulimnogammarus} verrucosus}
+		Other in the Formation of a Cryptic Amphipod Species: The Example of a {Lake
+		Baikal} Species Complex \textit{{Eulimnogammarus} verrucosus}
 	},
 	author       = {
 		Drozdova, Polina and Shatilina, Zhanna and Telnes, Ekaterina and Gurkov,
