--- a/vignettes/paper.bib
+++ b/vignettes/paper.bib
@@ -1,6 +1,12 @@
 @article{bahlburg2023,
-	title        = {An intercomparison of models predicting growth of {Antarctic} krill ({Euphausia superba}): The importance of recognizing model specificity},
-	author       = {Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and Murphy, Eugene J.},
+	title        = {
+		An intercomparison of models predicting growth of {Antarctic} krill
+		({Euphausia superba}): The importance of recognizing model specificity
+	},
+	author       = {
+		Bahlburg, Dominik and Thorpe, Sally E. and Meyer, Bettina and Berger, Uta and
+		Murphy, Eugene J.
+	},
 	year         = 2023,
 	month        = {07},
 	journal      = {PLOS ONE},
@@ -10,7 +16,6 @@
 	pages        = {1--29},
 	doi          = {10.1371/journal.pone.0286036},
 	url          = {https://doi.org/10.1371/journal.pone.0286036},
-	abstract     = {Antarctic krill (Euphausia superba) is a key species of the Southern Ocean, impacted by climate change and human exploitation. Understanding how these changes affect the distribution and abundance of krill is crucial for generating projections of change for Southern Ocean ecosystems. Krill growth is an important indicator of habitat suitability and a series of models have been developed and used to examine krill growth potential at different spatial and temporal scales. The available models have been developed using a range of empirical and mechanistic approaches, providing alternative perspectives and comparative analyses of the key processes influencing krill growth. Here we undertake an intercomparison of a suite of the available models to understand their sensitivities to major driving variables. This illustrates that the results are strongly determined by the model structure and technical characteristics, and the data on which they were developed and validated. Our results emphasize the importance of assessing the constraints and requirements of individual krill growth models to ensure their appropriate application. The study also demonstrates the value of the development of alternative modelling approaches to identify key processes affecting the dynamics of krill. Of critical importance for modelling the growth of krill is appropriately assessing and accounting for differences in estimates of food availability resulting from alternative methods of observation. We suggest that an intercomparison approach is particularly valuable in the development and application of models for the assessment of krill growth potential at circumpolar scales and for future projections. As another result of the intercomparison, the implementations of the models used in this study are now publicly available for future use and analyses.}
 }
 @book{moraga2023,
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
@@ -19,8 +24,7 @@
 	year         = 2024,
 	publisher    = {CRC Press},
 	address      = {Boca Raton, FL},
-	publisher    = {{Chapman and Hall/CRC}},
-	isbn         = {9781032633510},
+	isbn         = 9781032633510,
 	url          = {https://www.paulamoraga.com/book-spatial/},
 	urldate      = {2023-07-17},
 	edition      = {First edition},
@@ -29,27 +33,37 @@
 }
 @manual{R-biomod2,
 	title        = {{biomod2}: Ensemble Platform for Species Distribution Modeling},
-	author       = {Wilfried Thuiller and Damien Georges and Maya Gueguen and Robin Engler and Frank Breiner and Bruno Lafourcade and Remi Patin},
+	author       = {
+		Wilfried Thuiller and Damien Georges and Maya Gueguen and Robin Engler and
+		Frank Breiner and Bruno Lafourcade and Remi Patin
+	},
 	year         = 2023,
 	note         = {R package version 4.2-4}
 }
 @misc{R-dplyr,
 	title        = {{dplyr}: A Grammar of Data Manipulation},
-	author       = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+	author       = {
+		Hadley Wickham and Romain Fran\c{c}ois and Lionel Henry and Kirill M\"{u}ller
+		and Davis Vaughan
+	},
 	year         = 2023,
 	url          = {https://dplyr.tidyverse.org},
 	keywords     = {data-manipulation, grammar, r},
-	abstract     = {A fast, consistent tool for working with data frame like objects, both in memory and out of memory.},
 	version      = {1.1.2}
 }
 @manual{R-ebvcube,
 	title        = {{ebvcube}: Working with {netCDF} for Essential Biodiversity Variables},
-	author       = {Luise Quoss and Nestor Fernandez and Christian Langer and Jose Valdez and Henrique Miguel Pereira},
+	author       = {
+		Luise Quoss and Nestor Fernandez and Christian Langer and Jose Valdez and
+		Henrique Miguel Pereira
+	},
 	year         = 2021,
 	address      = {Germany},
 	url          = {https://github.com/EBVcube/ebvcube},
 	note         = {R package version 0.1.4},
-	organization = {German Centre for Integrative Biodiversity Research (iDiv) Halle-Jena-Leipzig}
+	organization = {
+		German Centre for Integrative Biodiversity Research (iDiv) Halle-Jena-Leipzig
+	}
 }
 @book{R-ggplot2,
 	title        = {{ggplot2}: Elegant Graphics for Data Analysis},
@@ -60,8 +74,13 @@
 	url          = {https://ggplot2.tidyverse.org}
 }
 @article{R-inlabru,
-	title        = {{inlabru}: an {R} package for {Bayesian} spatial modelling from ecological survey data},
-	author       = {Fabian E. Bachl and Finn Lindgren and David L. Borchers and Janine B. Illian},
+	title        = {
+		{inlabru}: an {R} package for {Bayesian} spatial modelling from ecological
+		survey data
+	},
+	author       = {
+		Fabian E. Bachl and Finn Lindgren and David L. Borchers and Janine B. Illian
+	},
 	year         = 2019,
 	journal      = {Methods in Ecology and Evolution},
 	publisher    = {British Ecological Society},
@@ -70,7 +89,10 @@
 	doi          = {10.1111/2041-210X.13168}
 }
 @manual{R-isoband,
-	title        = {{isoband}: Generate Isolines and Isobands from Regularly Spaced Elevation Grids},
+	title        = {
+		{isoband}: Generate Isolines and Isobands from Regularly Spaced Elevation
+		Grids
+	},
 	author       = {Hadley Wickham and Claus O. Wilke and Thomas Lin Pedersen},
 	year         = 2022,
 	url          = {https://CRAN.R-project.org/package=isoband},
@@ -95,8 +117,14 @@
 	url          = {https://joss.theoj.org/papers/10.21105/joss.05082}
 }
 @article{R-sparrpowr,
-	title        = {{sparrpowR}: a flexible {R} package to estimate statistical power to identify spatial clustering of two groups and its application},
-	author       = {I. D. Buller and D. W. Brown and T. A. Myers and R. R. Jones and M. J. Machiela},
+	title        = {
+		{sparrpowR}: a flexible {R} package to estimate statistical power to identify
+		spatial clustering of two groups and its application
+	},
+	author       = {
+		I. D. Buller and D. W. Brown and T. A. Myers and R. R. Jones and M. J.
+		Machiela
+	},
 	year         = 2021,
 	journal      = {International Journal of Health Geographics},
 	publisher    = {BioMed Central},
@@ -104,7 +132,9 @@
 	number       = 1,
 	pages        = {1--7},
 	doi          = {10.1186/s12942-021-00267-z},
-	url          = {https://ij-healthgeographics.biomedcentral.com/articles/10.1186/s12942-021-00267-z}
+	url          = {
+		https://ij-healthgeographics.biomedcentral.com/articles/10.1186/s12942-021-00267-z
+	}
 }
 @manual{R-terra,
 	title        = {{terra}: Spatial Data Analysis},
@@ -115,11 +145,10 @@
 }
 @misc{R-tibble,
 	title        = {{tibble}: Simple Data Frames},
-	author       = {Kirill Müller and Hadley Wickham},
+	author       = {Kirill M\"{u}ller and Hadley Wickham},
 	year         = 2023,
 	url          = {https://tibble.tidyverse.org/},
 	keywords     = {r, tidy-data},
-	abstract     = {Provides a 'tbl_df' class (the 'tibble') with stricter checking and better formatting than the traditional data frame.},
 	version      = {3.2.1}
 }
 @misc{R-tidyr,
@@ -128,12 +157,18 @@
 	year         = 2023,
 	url          = {https://tidyr.tidyverse.org},
 	keywords     = {r, tidy-data},
-	abstract     = {Tools to help to create tidy data, where each column is a variable, each row is an observation, and each cell contains a single value. 'tidyr' contains tools for changing the shape (pivoting) and hierarchy (nesting and 'unnesting') of a dataset, turning deeply nested lists into rectangular data frames ('rectangling'), and extracting values out of string columns. It also includes tools for working with missing values (both implicit and explicit).},
 	version      = {1.3.0}
 }
 @article{R-tidyverse,
 	title        = {Welcome to the {tidyverse}},
-	author       = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+	author       = {
+		Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy
+		D'Agostino McGowan and Romain Fran\c{c}ois and Garrett Grolemund and Alex
+		Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen
+		and Evan Miller and Stephan Milton Bache and Kirill M\"{u}ller and Jeroen
+		Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske
+		Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani
+	},
 	year         = 2019,
 	journal      = {Journal of Open Source Software},
 	volume       = 4,
@@ -145,7 +180,7 @@
 	title        = {Advanced {R}},
 	author       = {Wickham, Hadley},
 	year         = 2019,
-	month        = 5,
+	month        = may,
 	publisher    = {{Chapman and Hall/CRC}},
 	doi          = {10.1201/9781351201315},
 	url          = {http://dx.doi.org/10.1201/9781351201315},
@@ -156,7 +191,7 @@
 	title        = {S3},
 	author       = {Wickham, Hadley},
 	year         = 2019,
-	month        = 5,
+	month        = may,
 	booktitle    = {Advanced {R}},
 	publisher    = {{Chapman and Hall/CRC}},
 	doi          = {10.1201/9781351201315},
@@ -166,15 +201,17 @@
 	edition      = {2nd}
 }
 @article{ortiz2011organizacion,
-	title        = {La organización territorial de {España} a lo largo de la historia.},
-	author       = {Ruiz Ortíz, Miguel Ángel},
+	title        = {La organizaci\'{o}n territorial de {Espa\~{n}a} a lo largo de la historia.},
+	author       = {Ruiz Ort\'{\i}z, Miguel \'{A}ngel},
 	year         = 2011,
 	journal      = {Revista de Claseshistoria},
 	publisher    = {Clasesdehistoria},
 	number       = 3,
 	pages        = 1,
 	issn         = {1989-4988},
-	url          = {http://www.claseshistoria.com/revista/2011/articulos/ruiz-organizacion-espana.html}
+	url          = {
+		http://www.claseshistoria.com/revista/2011/articulos/ruiz-organizacion-espana.html
+	}
 }
 @article{R-sf,
 	title        = {{Simple Features for {R}: Standardized Support for Spatial Vector Data}},
@@ -199,7 +236,7 @@
 }
 @manual{R-rastervis,
 	title        = {{rasterVis}},
-	author       = {Oscar Perpiñán and Robert Hijmans},
+	author       = {Oscar Perpi\~{n}\'{a}n and Robert Hijmans},
 	year         = 2023,
 	url          = {https://oscarperpinan.github.io/rastervis/},
 	note         = {R package version 0.51.5}
@@ -222,16 +259,35 @@
 	title        = {The Development and Rationale of Cross-blended Hypsometric Tints},
 	author       = {Patterson, Tom and Jenny, Bernhard},
 	year         = 2011,
-	month        = 6,
+	month        = jun,
 	journal      = {Cartographic Perspectives},
 	number       = 69,
 	pages        = {31--46},
 	doi          = {10.14714/CP69.20},
-	url          = {https://cartographicperspectives.org/index.php/journal/article/view/cp69-patterson-jenny},
-	abstractnote = {Hypsometric tints have been a favored mapping technique for over 150 years.By the mid-twentieth century, hypsometric tints based on the work of JohnBartholomew, Jr., Eduard Imhof, and Karl Peucker became the de facto standardfor physical reference maps at small scales. More recently, the role and design ofhypsometric tints have come under scrutiny. One reason for this is the concern thatpeople misread elevation colors as climate or vegetation information. Cross-blendedhypsometric tints, introduced in 2009, are a partial solution to this problem. Theyuse variable lowland colors customized to match the differing natural environmentsof world regions, which merge into one another. In the short time since theirintroduction, cross-blended hypsometric tints have proved to be a popular choiceamong professional mapmakers. Most maps made with cross-blended hypsometrictints also contain shaded relief (terrain represented with modulated light andshadows).}
+	url          = {
+		https://cartographicperspectives.org/index.php/journal/article/view/cp69-patterson-jenny
+	},
+	abstractnote = {
+		Hypsometric tints have been a favored mapping technique for over 150 years.By
+		the mid-twentieth century, hypsometric tints based on the work of
+		JohnBartholomew, Jr., Eduard Imhof, and Karl Peucker became the de facto
+		standardfor physical reference maps at small scales. More recently, the role
+		and design ofhypsometric tints have come under scrutiny. One reason for this
+		is the concern thatpeople misread elevation colors as climate or vegetation
+		information. Cross-blendedhypsometric tints, introduced in 2009, are a
+		partial solution to this problem. Theyuse variable lowland colors customized
+		to match the differing natural environmentsof world regions, which merge into
+		one another. In the short time since theirintroduction, cross-blended
+		hypsometric tints have proved to be a popular choiceamong professional
+		mapmakers. Most maps made with cross-blended hypsometrictints also contain
+		shaded relief (terrain represented with modulated light andshadows).
+	}
 }
 @article{Leonardi2023,
-	title        = {{tidysdm}: leveraging the flexibility of {tidymodels} for Species Distribution Modelling in {R}},
+	title        = {
+		{tidysdm}: leveraging the flexibility of {tidymodels} for Species
+		Distribution Modelling in {R}
+	},
 	author       = {Michela Leonardi and Margherita Colucci and Andrea Manica},
 	year         = 2023,
 	journal      = {bioRxiv},
@@ -242,10 +298,16 @@
 	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
 @article{meister2023,
-	title        = {Blue mussels in western Norway have vanished where in reach of crawling predators},
-	author       = {Nadja Meister and Tom J. Langbehn and  Øystein Varpe and Christian Jørgensen},
+	title        = {
+		Blue mussels in western Norway have vanished where in reach of crawling
+		predators
+	},
+	author       = {
+		Nadja Meister and Tom J. Langbehn and  \O{}ystein Varpe and Christian
+		J\o{}rgensen
+	},
 	year         = 2023,
-	month        = 10,
+	month        = oct,
 	journal      = {Marine Ecology Progress Series},
 	volume       = 721,
 	pages        = {85--101},
