--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -775,7 +775,10 @@
 	article-number = 781
 }
 @article{we-25-221-2025,
-	title        = {Identifying refugia from the synergistic threats of climate change and invasive species},
+	title        = {
+		Identifying refugia from the synergistic threats of climate change and
+		invasive species
+	},
 	author       = {Lee, F. and Kusabs, I. A. K. and Perry, G. L. W. and MacNeil, C.},
 	year         = 2025,
 	journal      = {Web Ecology},
@@ -786,18 +789,31 @@
 	url          = {https://we.copernicus.org/articles/25/221/2025/}
 }
 @article{ZHOU2026100294,
-	title        = {Vascular plant diversity and distribution pattern in {Tajikistan}: A global hotspot of diversity},
-	author       = {Yixin Zhou and Suliya Ma and Wenjun Li and Parvina Kurbonova and Mariyo Boboev and Yufan Li and Hikmat Hisoriev and Keping Ma and Weikang Yang and Yuanming Zhang},
+	title        = {
+		Vascular plant diversity and distribution pattern in {Tajikistan}: A global
+		hotspot of diversity
+	},
+	author       = {
+		Yixin Zhou and Suliya Ma and Wenjun Li and Parvina Kurbonova and Mariyo
+		Boboev and Yufan Li and Hikmat Hisoriev and Keping Ma and Weikang Yang and
+		Yuanming Zhang
+	},
 	year         = 2026,
 	journal      = {Regional Sustainability},
 	pages        = 100294,
 	doi          = {10.1016/j.regsus.2026.100294},
 	issn         = {2666-660X},
 	url          = {https://www.sciencedirect.com/science/article/pii/S2666660X26000046},
-	keywords     = {Vascular plant, Species diversity, Distribution pattern, Conservation gaps, Tajikistan}
+	keywords     = {
+		Vascular plant, Species diversity, Distribution pattern, Conservation gaps,
+		Tajikistan
+	}
 }
 @article{su18010439,
-	title        = {Agroforestry Optimisation for Climate Policy: Mapping Silvopastoral Carbon Sequestration Trade-Offs in the {Mediterranean}},
+	title        = {
+		Agroforestry Optimisation for Climate Policy: Mapping Silvopastoral Carbon
+		Sequestration Trade-Offs in the {Mediterranean}
+	},
 	author       = {Kiziridis, Diogenis A. and Karmiris, Ilias and Fotakis, Dimitrios},
 	year         = 2026,
 	journal      = {Sustainability},
@@ -809,7 +825,10 @@
 	article-number = 439
 }
 @article{egusphere-2025-6363,
-	title        = {Predicting the risk of individual tree fall along powerlines in {Norway} with a mechanistic wind risk model and machine learning},
+	title        = {
+		Predicting the risk of individual tree fall along powerlines in {Norway} with
+		a mechanistic wind risk model and machine learning
+	},
 	author       = {Merlin, M. and Gardiner, B. and Solberg, S.},
 	year         = 2026,
 	journal      = {EGUsphere},
