--- a/vignettes/paper.bib
+++ b/vignettes/paper.bib
@@ -15,7 +15,7 @@
 	number       = 7,
 	pages        = {1--29},
 	doi          = {10.1371/journal.pone.0286036},
-	url          = {https://doi.org/10.1371/journal.pone.0286036},
+	url          = {https://doi.org/10.1371/journal.pone.0286036}
 }
 @book{moraga2023,
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
@@ -295,7 +295,6 @@
 	doi          = {10.1101/2023.07.24.550358},
 	url          = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358},
 	elocation-id = {2023.07.24.550358},
-	eprint       = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358.full.pdf}
 }
 @article{meister2023,
 	title        = {
