Prepare CRAN release

--- a/README.Rmd
+++ b/README.Rmd
@@ -153,7 +153,7 @@ cells and layers (i.e. `terra::ncell(your_rast)*terra::nlyr(your_rast) < 10e6`)
 you are good to go with **tidyterra**.
 
 When plotting rasters, resampling is performed automatically (as `terra::plot()`
-does, see the help page). You can adjust this with the `maxcell` parameter.
+does, see the help page). You can adjust this with the `maxcell` argument.
 
 ## Installation
 
