--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -306,19 +306,6 @@
 	url          = {https://linkinghub.elsevier.com/retrieve/pii/S0960982225002763},
 	urldate      = {2025-04-12}
 }
-@article{Maitner2025.04.03.647025,
-	title        = {{Flexible Methods for Species Distribution Modeling with Small Samples}},
-	author       = {
-		Maitner, Brian S. and Richards, Robert L. and Carlson, Ben and Drake, John M.
-		and Merow, Cory
-	},
-	year         = 2025,
-	journal      = {bioRxiv},
-	publisher    = {Cold Spring Harbor Laboratory},
-	doi          = {10.1101/2025.04.03.647025},
-	url          = {https://www.biorxiv.org/content/early/2025/04/08/2025.04.03.647025},
-	elocation-id = {2025.04.03.647025}
-}
 @article{coffey_spatial_2025,
 	title        = {
 		The spatial distribution of a hummingbird-pollinated plant is not strongly
@@ -788,6 +775,29 @@
 	doi          = {10.5194/we-25-221-2025},
 	url          = {https://we.copernicus.org/articles/25/221/2025/}
 }
+@article{https://doi.org/10.1111/mec.70179,
+	title        = {
+		Pliocene Forest Fragmentation Shaped Speciation in Tropical {Asia's} Giant
+		Squirrels (\textit{{Ratufa}})
+	},
+	author       = {
+		Hinckley, Arlo and Pinilla-Buitrago, Gonzalo E. and Maldonado, Jes\'{u}s E.
+		and Flores, Mary Faith C. and Esselstyn, Jacob A. and Inayah, Nurul and
+		Hawkins, Melissa T. R.
+	},
+	year         = 2025,
+	journal      = {Molecular Ecology},
+	volume       = 34,
+	number       = 24,
+	pages        = {e70179},
+	doi          = {10.1111/mec.70179},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.70179},
+	note         = {e70179 MEC-25-0301.R2},
+	keywords     = {
+		genomics/proteomics, mammals, niche modelling, phylogeography, speciation,
+		systematics
+	}
+}
 @article{ZHOU2026100294,
 	title        = {
 		Vascular plant diversity and distribution pattern in {Tajikistan}: A global
@@ -836,4 +846,33 @@
 	pages        = {1--34},
 	doi          = {10.5194/egusphere-2025-6363},
 	url          = {https://egusphere.copernicus.org/preprints/2026/egusphere-2025-6363/}
+}
+@article{https://doi.org/10.1002/ecog.08112,
+	title        = {Flexible methods for species distribution modeling with small samples},
+	author       = {
+		Maitner, Brian S. and Richards, Robert L. and Carlson, Ben S. and Drake, John
+		M. and Merow, Cory
+	},
+	journal      = {Ecography},
+	pages        = {e08112},
+	doi          = {10.1002/ecog.08112},
+	url          = {https://nsojournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecog.08112},
+	keywords     = {
+		species distribution models, niche models, MaxEnt, range-bagging, kernel
+		density estimation, presence-only data
+	}
+}
+@article{Copot2026,
+	title        = {
+		Assessment of multiple outcomes of habitat models can significantly affect
+		conservation decisions for threatened species
+	},
+	author       = {Copot, Ovidiu and L\~{o}hmus, Asko},
+	year         = 2026,
+	month        = jan,
+	day          = 20,
+	journal      = {Scientific Reports},
+	doi          = {10.1038/s41598-026-35987-4},
+	issn         = {2045-2322},
+	url          = {https://doi.org/10.1038/s41598-026-35987-4}
 }
