--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -778,7 +778,7 @@
 @article{https://doi.org/10.1111/mec.70179,
 	title        = {
 		Pliocene Forest Fragmentation Shaped Speciation in Tropical {Asia's} Giant
-		Squirrels (\textit{{Ratufa}})
+		Squirrels ({\textit{Ratufa}})
 	},
 	author       = {
 		Hinckley, Arlo and Pinilla-Buitrago, Gonzalo E. and Maldonado, Jes\'{u}s E.
@@ -853,6 +853,7 @@
 		Maitner, Brian S. and Richards, Robert L. and Carlson, Ben S. and Drake, John
 		M. and Merow, Cory
 	},
+	year         = 2026,
 	journal      = {Ecography},
 	pages        = {e08112},
 	doi          = {10.1002/ecog.08112},
