--- a/vignettes/welcome.Rmd
+++ b/vignettes/welcome.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 
 
-## Welcome to {tidyterra}
+## The tidyterra package
 
 **tidyterra** is a package that adds common methods from the
 [**tidyverse**](https://tidyverse.org/) for `SpatRaster` and `SpatVector`
