--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -4,7 +4,6 @@
 		degradation, species distributions and species vulnerabilities in {East}
 		{African} grasslands.
 	},
-	shorttitle   = {Advancing ecosystem understanding},
 	author       = {Wiethase, Joris Hendrik},
 	year         = 2023,
 	month        = dec,
@@ -46,7 +45,6 @@
 		Active management is required to regenerate the {Caledonian} forest:
 		{Alladale} as a case study
 	},
-	shorttitle   = {Active management is required to regenerate the {Caledonian} forest},
 	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
 	year         = 2024,
 	month        = jan,
@@ -62,7 +60,6 @@
 }
 @article{elio_medina_how_2025,
 	title        = {How to {Approach} the {Definition} of {WUI} in {Northern} {Europe}},
-	shorttitle   = {How to {Approach} the {Definition} of {\textless}span style="font-variant},
 	author       = {
 		Elio Medina, Javier and Plathner, Frida Vermina and Pastor, Elsa and
 		Fernandez-Anez, Nieves
@@ -362,9 +359,9 @@
 		study in the {Northern Region of Ghana}
 	},
 	author       = {
-		Kassim, Yussif Baba  and Pinto, Francisco  and MacCarthy, Dilys S.  and
-		Bindraban, Prem  and Chirinda, Ngonidzashe  and Stomph, TjeerdJan  and
-		Struik, Paul C.
+		Kassim, Yussif Baba and Pinto, Francisco and MacCarthy, Dilys S.  and
+		Bindraban, Prem and Chirinda, Ngonidzashe and Stomph, TjeerdJan and Struik,
+		Paul C.
 	},
 	year         = 2025,
 	journal      = {Frontiers in Soil Science},
@@ -381,8 +378,8 @@
 		air-breathing krill predators using acoustic data from the fishery
 	},
 	author       = {
-		Dominik Bahlburg  and Sebastian Menze  and Bj\o{}rn A. Krafft  and Andy D.
-		Lowther  and Bettina Meyer
+		Dominik Bahlburg and Sebastian Menze and Bj\o{}rn A. Krafft and Andy D.
+		Lowther and Bettina Meyer
 	},
 	year         = 2025,
 	journal      = {Proceedings of the National Academy of Sciences},
@@ -409,10 +406,6 @@
 	title        = {
 		Vectors, host range, and spatial distribution of \textit{{Dirofilaria}
 		immitis} and \textit{{D.} {repens}} in {Europe}: a systematic review
-	},
-	shorttitle   = {
-		Vectors, host range, and spatial distribution of \textit{Dirofilaria immitis}
-		and \textit{D. repens} in {Europe}
 	},
 	author       = {Hattendorf, Carolin and L\"{u}hken, Renke},
 	year         = 2025,
@@ -523,7 +516,6 @@
 		metaphylogeography using a community-based {eDNA} metabarcoding monitoring
 		network
 	},
-	shorttitle   = {Biomonitoring 2.0 {Refined}},
 	author       = {
 		Riley, Andrew C. and Wright, Michael and Porter, Teresita M. and Maitland, V.
 		Carley and Baird, Donald J. and Hajibabaei, Mehrdad
@@ -621,7 +613,6 @@
 		Mapping risks and landscapes: conservation insights for {Italian} small
 		ruminant populations
 	},
-	shorttitle   = {Mapping risks and landscapes},
 	author       = {Bionda, Arianna and Negro, Alessio and Grande, Silverio and Crepaldi, Paola},
 	year         = 2025,
 	month        = sep,
@@ -654,7 +645,6 @@
 }
 @article{jones_saur_2025,
 	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000–2022)},
-	shorttitle   = {Saur and decline},
 	author       = {Jones, Max Dolton},
 	year         = 2025,
 	month        = oct,
@@ -675,10 +665,10 @@
 		ecological dominance globally
 	},
 	author       = {
-		Gabriel M. Moulatlet  and Cory Merow  and Brian Maitner  and Brad Boyle  and
-		Xiao Feng  and Amy E. Frazier  and Cesar Hinojo-Hinojo  and Erica A. Newman
-		and Patrick R. Roehrdanz  and Lei Song  and Fabricio Villalobos  and Pablo A.
-		Marquet  and Jens-Christian Svenning  and Brian J. Enquist
+		Gabriel M. Moulatlet and Cory Merow and Brian Maitner and Brad Boyle and Xiao
+		Feng and Amy E. Frazier and Cesar Hinojo-Hinojo and Erica A. Newman and
+		Patrick R. Roehrdanz and Lei Song and Fabricio Villalobos and Pablo A.
+		Marquet and Jens-Christian Svenning and Brian J. Enquist
 	},
 	year         = 2025,
 	journal      = {Proceedings of the National Academy of Sciences},
