Add references and revamp navbars

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -553,19 +553,6 @@
 	urldate      = {2025-09-29},
 	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/}
 }
-@misc{read_assessing_2025,
-	title        = {
-		Assessing protected areas as climate refugia for threatened plant species in
-		{Britain}
-	},
-	author       = {Read, Freya R. and Warmington, Rachel J. and Beale, Colin M.},
-	year         = 2025,
-	month        = sep,
-	doi          = {10.1101/2025.09.02.673856},
-	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.09.02.673856},
-	urldate      = {2025-09-29},
-	copyright    = {http://creativecommons.org/licenses/by/4.0/}
-}
 @article{fard_developing_2025,
 	title        = {
 		Developing a {Spatiotemporal} {Repository} of {Extreme} {Heat} and {Cold}
@@ -644,7 +631,7 @@
 	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568}
 }
 @article{jones_saur_2025,
-	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000–2022)},
+	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000-2022)},
 	author       = {Jones, Max Dolton},
 	year         = 2025,
 	month        = oct,
@@ -866,4 +853,20 @@
 	doi          = {10.1038/s41598-026-35987-4},
 	issn         = {2045-2322},
 	url          = {https://doi.org/10.1038/s41598-026-35987-4}
+}
+@article{10.1371/journal.pone.0332485,
+	title        = {
+		Assessing protected areas as climate refugia for threatened plant species in
+		{Britain}
+	},
+	author       = {Read, Freya R. and Warmington, Rachel J. and Beale, Colin M.},
+	year         = 2026,
+	month        = {01},
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
+	volume       = 21,
+	number       = 1,
+	pages        = {1--16},
+	doi          = {10.1371/journal.pone.0332485},
+	url          = {https://doi.org/10.1371/journal.pone.0332485}
 }
