--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -634,17 +634,14 @@
 	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000-2022)},
 	author       = {Jones, Max Dolton},
 	year         = 2025,
-	month        = oct,
-	journal      = {PLOS One},
+	month        = 10,
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
 	volume       = 20,
 	number       = 10,
-	pages        = {e0333746},
+	pages        = {1--25},
 	doi          = {10.1371/journal.pone.0333746},
-	issn         = {1932-6203},
-	url          = {https://dx.plos.org/10.1371/journal.pone.0333746},
-	urldate      = {2025-10-27},
-	language     = {en},
-	editor       = {Mizsei, Edvard}
+	url          = {https://doi.org/10.1371/journal.pone.0333746},
 }
 @article{doi:10.1073/pnas.2517585122,
 	title        = {
