--- a/vignettes/articles/wild.Rmd
+++ b/vignettes/articles/wild.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "tidyterra in the wild"
-description: Use of tidyterra in publications.
+description: Use of **tidyterra** in publications.
 bibliography: INPUBS.bib
 csl: apa.csl
 nocite: '@*'
