--- a/README.Rmd
+++ b/README.Rmd
@@ -113,6 +113,7 @@ Current methods and functions provided by **tidyterra** are:
 | `dplyr::mutate()` | ✔️ | ✔️ Create /modify layers |
 | `dplyr::transmute()` | ✔️ | ✔️ |
 | `dplyr::filter()` | ✔️ | ✔️ Modify cells values and (additionally) remove outer cells. |
+| `dplyr::filter_out()` | ✔️ |  |
 | `dplyr::slice()` | ✔️ | ✔️ Additional methods for slicing by row and column. |
 | `dplyr::pull()` | ✔️ | ✔️ |
 | `dplyr::rename()` | ✔️ | ✔️ |
